# dotfiles

./: .bashrc  .gitconfig  .gitignore  .pypirc  .stow-local-ignore  Brewfile  README.md  TODO.md  update.sh
.config/: switch_nvim
.config/bash/: alias.sh  interactive.sh
.config/brewfile/: Brewfile  requirements.txt
.config/configstore/: update-notifier-yo.json
.config/ghc/: ghci_history
.config/kitty/: kitty.conf
.config/latexmk/: latexmkrc
.config/lf/: lfrc
.config/nvim/: init.lua  lazy-lock.json  want
.config/skhd/: skhdrc
.config/tree-sitter/: config.json
.config/uv/: uv-receipt.json
.config/yabai/: yabairc
.config/yazi/: yazi.toml
.config/zed/: settings.json
configfiles/: ..bashrc.un~  ..emacs.un~  ..profile.un~  ..vimrc.un~  .bashrc  .emacs  .gitconfig  .profile  .stowignore  .vimrc
docker/: Makefile  cont  txt
docker/ide/: Dockerfile  err.txt  extensions.txt  keybindings.json  settings.json
docker/lang-latex/: Dockerfile
installers/: brew.sh  uv.sh
latex/: .latexindent.yml
lib/: Brewfile  Brewfile.lock.json  gitconfig  macos.jsonc  params.sh  symlinks.json
lib/nvim/: *  (+1 more)
locals/: *.md
package-list/: .stow-local-ignore  Brewfile  code-extensions  mas  pyproject.toml  tool-list.txt
programs/: .Brewfile.un~  .install.sh.un~  Brewfile
scripts/: update_git_repose.sh
shell/: .bash_profile  .profile  .xonshrc
src/: .brew.sh.swp  arguments.py  brew.sh  cmd.py  conf_files.sh  config.py  core.py  edit.py  logs.py  macos.sh  main.sh  packages.py  symlinks.sh  system.py  upgrade_bash.sh  utils.sh
zoxide/: .zoxide.nu
(+246 files in other folders)
